--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -263,7 +263,10 @@ jobs:
         sudo chroot rootfs /bin/bash -c "rm -f /root/*.deb"
         if [ "$OSTYPE" = "debian" ]; then
           sudo wget -O rootfs/etc/apt/trusted.gpg.d/mobian.gpg https://repo.mobian-project.org/mobian.gpg
-          sudo chroot rootfs /bin/bash -c "echo 'deb http://repo.mobian-project.org/ ${{ inputs.debian_version }} main non-free-firmware' > /etc/apt/sources.list.d/mobian.list"
+          wget -O- https://repo.mobian-project.org/mobian.gpg \
+            | gpg --dearmor \
+            | sudo tee rootfs/usr/share/keyrings/mobian-archive-keyring.gpg > /dev/null
+          sudo chroot rootfs /bin/bash -c "echo 'deb [signed-by=/usr/share/keyrings/mobian-archive-keyring.gpg] http://repo.mobian-project.org/ ${{ inputs.debian_version }} main non-free-firmware' > /etc/apt/sources.list.d/mobian.list"
           sudo chroot rootfs /bin/bash -c "apt-get update && apt-get install -qqy --no-install-recommends modemmanager qrtr-tools systemd-timesyncd mobile-broadband-provider-info mobian-tweaks-common"
         fi
         if [ "$ver" = "trixie" ]; then
