--- a/.github/workflows/build_openstick_kernel.yml
+++ b/.github/workflows/build_openstick_kernel.yml
@@ -263,8 +263,8 @@ jobs:
         sudo chroot rootfs /bin/bash -c "rm -f /root/*.deb"
         sudo chroot rootfs /bin/bash -c "apt-mark hold linux-libc-dev"
         if [ "$OSTYPE" = "debian" ]; then
-          curl -s https://repo.mobian-project.org/mobian.gpg | sudo tee rootfs/usr/share/keyrings/mobian.gpg > /dev/null
-          sudo chroot rootfs /bin/bash -c "echo 'deb [signed-by=/usr/share/keyrings/mobian.gpg] http://repo.mobian-project.org/ ${{ inputs.debian_version }} main non-free-firmware' > /etc/apt/sources.list.d/mobian.list"
+          sudo curl -o rootfs/etc/apt/trusted.gpg.d/mobian.gpg https://repo.mobian-project.org/mobian.gpg
+          sudo chroot rootfs /bin/bash -c "echo 'deb http://repo.mobian-project.org/ ${{ inputs.debian_version }} main non-free-firmware' > /etc/apt/sources.list.d/mobian.list"
           sudo chroot rootfs /bin/bash -c "apt-get update && apt-get install -qqy --no-install-recommends modemmanager qrtr-tools systemd-timesyncd mobile-broadband-provider-info mobian-tweaks-common"
         fi
         if [ "$ver" = "trixie" ]; then
